k8s/base/twitchbotapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitchbotapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: music.phat.wtf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twitchbotapp
            port:
              number: 8080
